feat: user login.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,9 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Paths */
+    "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/*"],
       "#build/ui/*": ["./node_modules/.nuxt-ui/ui/*"]
     }
   },
