--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxt/ui": "^4.4.0",
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
+    "@vueuse/core": "^14.1.0",
     "date-fns": "^4.1.0",
+    "ofetch": "^1.5.1",
+    "pinia": "^3.0.4",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4",
     "zod": "^4.3.5"
